# memd

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  START-HERE.md  THEORY.md
crates/memd-client/: Cargo.toml
crates/memd-client/.memd/state/: raw-spine.jsonl
crates/memd-client/fixtures/: README.md
crates/memd-client/fixtures/a4/: breach-transcript.jsonl  post-compact-expected.json  session-transcript.jsonl
crates/memd-client/fixtures/c4/: turns-cross-compact.jsonl  turns-happy.jsonl  turns-neutral.jsonl
crates/memd-client/fixtures/e4/: expected-depth.jsonl  queries.jsonl  selective-expansion-ceo-negative.jsonl  selective-expansion-ceo-positive.jsonl  specifier-negative.jsonl  specifier-positive.jsonl
crates/memd-client/fixtures/f4/: aligned-behavior.jsonl  drift-behavior.jsonl  judge-verdict-drift.json  judge-verdict-ok.json  preferences.jsonl  user-restate-baseline.jsonl  user-restate-withF4.jsonl
crates/memd-client/fixtures/g4/: expected-cut-1.json  expected-cut-2.json  expected-cut-3.json  seed-state.json  session-1.jsonl  session-2.jsonl  session-3.jsonl
crates/memd-client/src/: autoresearch_runtime.rs  benchmark_runtime.rs  bundle_awareness_runtime.rs  bundle_bootstrap_runtime.rs  bundle_config_runtime.rs  bundle_init_runtime.rs  bundle_lane_runtime.rs  bundle_maintenance_runtime.rs  bundle_memory_surface.rs  bundle_profile_runtime.rs  bundle_runtime.rs  bundle_turn_runtime.rs  cli_runtime.rs  commands.rs  compiled_event.rs  compiled_memory.rs  coordination_views.rs  e2e_tests.rs  evaluation_eval_runtime.rs  evaluation_gap_runtime.rs  evaluation_runtime.rs  evaluation_runtime_tests.rs  evaluation_runtime_tests_awareness.rs  evaluation_runtime_tests_bundle_state.rs  evaluation_runtime_tests_evolution.rs  evaluation_runtime_tests_harness_pack.rs  evaluation_runtime_tests_hive_commands.rs  evaluation_runtime_tests_runtime_io.rs  evaluation_runtime_tests_support.rs  evaluation_runtime_tests_tail.rs  evaluation_views_runtime.rs  evolution_runtime.rs  hive_ops_runtime.rs  hive_runtime.rs  improvement_runtime.rs  ingest_runtime.rs  inspiration_search.rs  lib.rs  main.rs  main_tests.rs  (+19 more)
crates/memd-client/src/awareness/: diagnostics.rs  hive.rs  mod.rs  summary.rs
crates/memd-client/src/benchmark/: baselines.rs  full_eval.rs  mod.rs  public_benchmark.rs  public_benchmark_dataset.rs  public_benchmark_full_eval.rs  public_benchmark_report.rs  public_benchmark_retrieval.rs  public_benchmark_support.rs  runtime.rs  scorers.rs
crates/memd-client/src/bundle/: admin_runtime.rs  agent_profiles.rs  bootstrap_runtime.rs  config_runtime.rs  lane_runtime.rs  memory_surface.rs  mod.rs  models.rs  profile_runtime.rs  report_runtime.rs  self_tuning_runtime.rs  state_runtime.rs  status_runtime.rs  telemetry_runtime.rs  turn_runtime.rs
crates/memd-client/src/cli/: args.rs  args_coordination.rs  args_lanes.rs  args_memory.rs  args_runtime.rs  args_skill.rs  cli_analysis_runtime.rs  cli_awareness_runtime.rs  cli_contract_runtime.rs  cli_correction_runtime.rs  cli_dev_server_runtime.rs  cli_embed_runtime.rs  cli_features_runtime.rs  cli_gate_runtime.rs  cli_hook_enforce.rs  cli_hook_runtime.rs  cli_inspection_runtime.rs  cli_lifecycle_probe_runtime.rs  cli_live_state_runtime.rs  cli_live_state_runtime_tests.rs  cli_memory_os_runtime.rs  cli_memory_os_runtime_tests.rs  cli_memory_os_runtime_token_status.rs  cli_memory_runtime.rs  cli_memory_runtime_prompt_safety.rs  cli_obsidian_runtime.rs  cli_preference_runtime.rs  cli_rag_runtime.rs  cli_utility_runtime.rs  command_catalog.rs  commands.rs  mod.rs  skill_catalog.rs  skill_runtime.rs  terminal_ux.rs
crates/memd-client/src/compiled/: event.rs  memory.rs  mod.rs
crates/memd-client/src/coordination/: control.rs  mod.rs  runtime.rs  views.rs
crates/memd-client/src/evaluation/: eval_report_runtime.rs  eval_runtime.rs  gap_artifacts_runtime.rs  gap_runtime.rs  mod.rs  views_runtime.rs
crates/memd-client/src/evaluation_runtime_tests/: evaluation_runtime_tests_bundle_setup.rs  evaluation_runtime_tests_bundle_state.rs  evaluation_runtime_tests_evolution.rs  evaluation_runtime_tests_harness_pack.rs  evaluation_runtime_tests_hive_commands.rs  evaluation_runtime_tests_runtime_io.rs  evaluation_runtime_tests_support.rs  evaluation_runtime_tests_tail.rs  mod.rs
crates/memd-client/src/harness/: agent_zero.rs  cache.rs  claude_code.rs  codex.rs  hermes.rs  index.rs  mod.rs  openclaw.rs  opencode.rs  preset.rs  shared.rs
crates/memd-client/src/hive/: commands_runtime.rs  mod.rs  ops_runtime.rs
crates/memd-client/src/main_tests/: autoresearch_evolution_tests.rs  awareness_hive_tests.rs  mod.rs  (+9 more)
crates/memd-core/: Cargo.toml
crates/memd-core/src/: contract.rs  embedding_registry.rs  enforcement.rs  file_ledger.rs  isolation.rs  lib.rs  lifecycle_probe.rs  self_tuning.rs  skill_mirror.rs  telemetry.rs  v11.rs  v12.rs  v13.rs  v16.rs  v17.rs  v18.rs  v19.rs  v20.rs
crates/memd-multimodal/: Cargo.toml
crates/memd-multimodal/src/: fixtures.rs  lib.rs
crates/memd-rag/: Cargo.toml
crates/memd-rag/src/: lib.rs
crates/memd-server/: Cargo.toml  build.rs
crates/memd-server/src/: atlas.rs  backup.rs  decay_calibration.rs  embed.rs  episodes.rs  errors.rs  helpers.rs  inspection.rs  keys.rs  latency.rs  main.rs  procedural.rs  query_sanitize.rs  rag_bridge.rs  rate_limit.rs  repair.rs  routes.rs  routes_context_packet.rs  routes_prompt_firewall.rs  routes_search.rs  routes_tests.rs  routing.rs  status.rs  store.rs  store_coordination.rs  store_dedup.rs  store_divergence.rs  store_entities.rs  store_episodes.rs  store_hive.rs  store_hive_lifecycle.rs  store_hive_runtime.rs  store_ingestion.rs  store_memory_domains.rs  store_memory_runtime.rs  store_migrations.rs  store_runtime_maintenance.rs  store_skill_policy.rs  store_tests.rs  token_headers.rs  (+2 more)
crates/memd-sidecar/: Cargo.toml
crates/memd-sidecar/src/: fixtures.rs  lib.rs  main.rs
crates/memd-worker/: Cargo.toml
crates/memd-worker/src/: main.rs
(+1735 files in other folders)
