[package]
name = "memd-client"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
memd-core = { path = "../memd-core" }
memd-multimodal = { path = "../memd-multimodal" }
memd-rag = { path = "../memd-rag" }
memd-sidecar = { path = "../memd-sidecar" }
memd-schema = { path = "../memd-schema" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
walkdir = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
notify = "6"
tempfile = "3"
shell-words = "1"

[dev-dependencies]
axum = "0.8"

[[bin]]
name = "memd"
path = "src/main.rs"
