[package]
name = "memd-multimodal"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
memd-sidecar = { path = "../memd-sidecar" }
memd-schema = { path = "../memd-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2"
uuid = { version = "1", features = ["serde", "v4"] }
